--- a/Upyourcloud/app/src/main/res/layout/activity_my_devices.xml
+++ b/Upyourcloud/app/src/main/res/layout/activity_my_devices.xml
@@ -9,4 +9,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.sukee.upyourcloud.MyDevices">
 
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="41dp" />
 </RelativeLayout>
