--- a/Upyourcloud/app/src/main/res/layout/activity_login.xml
+++ b/Upyourcloud/app/src/main/res/layout/activity_login.xml
@@ -13,4 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:id="@+id/button" android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>
 </RelativeLayout>
