--- a/Upyourcloud/app/src/main/res/layout/activity_backup.xml
+++ b/Upyourcloud/app/src/main/res/layout/activity_backup.xml
@@ -7,6 +7,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.sukee.upyourcloud.Backup">
+    tools:context="com.nas..upyourcloud.Backup">
 
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select File"
+            android:id="@+id/button2" android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>
 </RelativeLayout>
