--- a/Upyourcloud/app/src/main/res/layout/activity_updates.xml
+++ b/Upyourcloud/app/src/main/res/layout/activity_updates.xml
@@ -7,6 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.sukee.upyourcloud.Updates">
+    tools:context="com.nas..upyourcloud.Updates">
 
 </RelativeLayout>
