Initial model for a list : working

--- a/Upyourcloud/app/src/main/res/layout/activity_my_drive.xml
+++ b/Upyourcloud/app/src/main/res/layout/activity_my_drive.xml
@@ -9,4 +9,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.nas..upyourcloud.MyDrive">:
 
+    <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView2"
+            android:layout_alignParentTop="true"/>
 </RelativeLayout>
